--- a/index.html
+++ b/index.html
@@ -31,21 +31,25 @@
         <div class="label">Swatch Internet Time</div>
       </div>
       <div class="grid-item">
-        <div id="unix-time" class="time"></div>
-        <div id="unix-time-milliseconds" class="time"></div>
+        <div class="frow items-end">
+          <div id="unix-time" class="time"></div>
+          <div id="unix-time-milliseconds" class="time"></div>
+        </div>
         <div class="label">UNIX Timestamp</div>
       </div>
       <div class="grid-item">
         <div id="local-time" class="time"></div>
         <div class="label mb-40">Local Time</div>
         <div id="local-24-hour-time" class="time"></div>
-        <div class="label">Local 24-hour Time</div>
+        <div id="local-24-hour-time-label" class="label">
+          Local 24-hour Time
+        </div>
       </div>
       <div class="grid-item">
         <div id="utc-time" class="time"></div>
         <div class="label mb-40">UTC Time</div>
         <div id="utc-24-hour-time" class="time"></div>
-        <div class="label">UTC 24-hour Time</div>
+        <div id="utc-24-hour-time-label" class="label">UTC 24-hour Time</div>
       </div>
     </div>
     <script src="./scripts/script.js"></script>
