fix local 24-hour time

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div id="unix-time" class="time"></div>
           <div id="unix-time-milliseconds" class="time"></div>
         </div>
-        <div class="label">UNIX Timestamp</div>
+        <div class="label">Unix Time</div>
       </div>
       <div class="grid-item">
         <div id="local-time" class="time"></div>
