--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <div class="label">Unix Time</div>
       </div>
       <div class="grid-item">
-        <div id="local-time" class="time"></div>
+        <div class="meridian-wrapper">
+          <div id="local-time" class="time"></div>
+          <div id="local-time-meridian" class="meridian"></div>
+        </div>
         <div class="label mb-40">Local Time</div>
         <div id="local-24-hour-time" class="time"></div>
         <div id="local-24-hour-time-label" class="label">
@@ -46,7 +49,10 @@
         </div>
       </div>
       <div class="grid-item">
-        <div id="utc-time" class="time"></div>
+        <div class="meridian-wrapper">
+          <div id="utc-time" class="time"></div>
+          <div id="utc-time-meridian" class="meridian"></div>
+        </div>
         <div class="label mb-40">UTC Time</div>
         <div id="utc-24-hour-time" class="time"></div>
         <div id="utc-24-hour-time-label" class="label">UTC 24-hour Time</div>
