fix times aligning in grid

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="label">Swatch Internet Time</div>
       </div>
       <div class="grid-item">
-        <div class="frow items-end">
+        <div class="frow items-baseline">
           <div id="unix-time" class="time"></div>
           <div id="unix-time-milliseconds" class="time"></div>
         </div>
@@ -42,8 +42,8 @@
           <div id="local-time" class="time"></div>
           <div id="local-time-meridian" class="meridian"></div>
         </div>
-        <div class="label mb-40">Local Time</div>
-        <div id="local-24-hour-time" class="time"></div>
+        <div class="label">Local Time</div>
+        <div id="local-24-hour-time" class="time mt-60"></div>
         <div id="local-24-hour-time-label" class="label">
           Local 24-hour Time
         </div>
@@ -53,8 +53,8 @@
           <div id="utc-time" class="time"></div>
           <div id="utc-time-meridian" class="meridian"></div>
         </div>
-        <div class="label mb-40">UTC Time</div>
-        <div id="utc-24-hour-time" class="time"></div>
+        <div class="label">UTC Time</div>
+        <div id="utc-24-hour-time" class="time mt-60"></div>
         <div id="utc-24-hour-time-label" class="label">UTC 24-hour Time</div>
       </div>
     </div>
