--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <title>Internet Zone</title>
+    <title>Internet Time Zone</title>
     <meta
       name="description"
       content="Schedule your next international meeting with ease"
@@ -27,29 +27,29 @@
   <body class="height-100">
     <div class="grid height-100">
       <div class="grid-item">
-        <div id="swatch-time" class="time"></div>
+        <div id="swatch-time" class="time">000</div>
         <div class="label">Swatch Internet</div>
       </div>
       <div class="grid-item">
         <div class="frow items-baseline">
-          <div id="unix-time" class="time"></div>
-          <div id="unix-time-milliseconds" class="additional-time"></div>
+          <div id="unix-time" class="time">0000000000</div>
+          <div id="unix-time-milliseconds" class="additional-time">000</div>
         </div>
         <div class="label">Unix</div>
       </div>
       <div class="grid-item">
         <div class="meridian-container">
           <div class="frow items-baseline">
-            <div id="local-time-hour" class="time"></div>
-            <div id="local-time" class="additional-time"></div>
+            <div id="local-time-hour" class="time">00</div>
+            <div id="local-time" class="additional-time">:00</div>
           </div>
           <div id="local-time-meridian" class="meridian"></div>
         </div>
         <div class="label">Local</div>
         <div id="local-24-hour-time-container" class="mt-40" hidden>
           <div class="frow items-baseline">
-            <div id="local-24-hour-time-hour" class="time"></div>
-            <div id="local-24-hour-time" class="additional-time"></div>
+            <div id="local-24-hour-time-hour" class="time">00</div>
+            <div id="local-24-hour-time" class="additional-time">:00</div>
           </div>
           <div id="local-24-hour-time-label" class="label">
             Local 24-hour
@@ -59,16 +59,16 @@
       <div class="grid-item">
         <div class="meridian-container">
           <div class="frow items-baseline">
-            <div id="utc-time-hour" class="time"></div>
-            <div id="utc-time" class="additional-time"></div>
+            <div id="utc-time-hour" class="time">00</div>
+            <div id="utc-time" class="additional-time">:00</div>
           </div>
           <div id="utc-time-meridian" class="meridian"></div>
         </div>
         <div class="label">UTC</div>
         <div id="utc-24-hour-time-container" class="mt-40" hidden>
           <div class="frow items-baseline">
-            <div id="utc-24-hour-time-hour" class="time"></div>
-            <div id="utc-24-hour-time" class="additional-time"></div>
+            <div id="utc-24-hour-time-hour" class="time">00</div>
+            <div id="utc-24-hour-time" class="additional-time">:00</div>
           </div>
           <div id="utc-24-hour-time-label" class="label">UTC 24-hour</div>
         </div>
