add seconds loading bar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
   </head>
   <body class="height-100">
+    <div id="seconds-bar"></div>
     <div class="grid height-100">
       <div class="grid-item">
         <div id="swatch-time" class="time">000</div>
