fade in seconds bar

--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
   </head>
   <body class="height-100">
-    <div id="seconds-bar"></div>
     <div class="grid height-100">
       <div class="grid-item">
         <div id="swatch-time" class="time">000</div>
-        <div class="label">Swatch Internet</div>
+        <div class="label">Swatch Internet Time</div>
       </div>
       <div class="grid-item">
         <div class="frow items-baseline">
@@ -75,6 +74,7 @@
         </div>
       </div>
     </div>
+    <div id="seconds-bar" hidden></div>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
