--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Schedule your next international meeting with ease"
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta name="theme-color" content="#02A6A9" />
+    <meta name="theme-color" content="#263238" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/frow@3/dist/frow.min.css"
