--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
   <body class="height-100">
     <div class="grid height-100">
       <div class="grid-item">
-        <div id="swatch-time" class="time">000</div>
+        <div class="frow items-baseline">
+          <div id="swatch-time" class="time">000</div>
+          <div id="swatch-time-centibeats" class="additional-time">00</div>
+        </div>
         <div class="label">Swatch Internet Time</div>
       </div>
       <div class="grid-item">
