add author meta tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="description"
       content="Schedule your next international meeting with ease"
     />
+    <meta name="author" content="codysherman.com" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="theme-color" content="#263238" />
     <link
