add missing . on swatch time placeholder

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="grid-item">
         <div class="frow items-baseline">
           <div id="swatch-time" class="time">000</div>
-          <div id="swatch-time-centibeats" class="additional-time">00</div>
+          <div id="swatch-time-centibeats" class="additional-time">.00</div>
         </div>
         <div class="label">Swatch Internet Time</div>
       </div>
