add github line

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="author" content="codysherman.com" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="theme-color" content="#263238" />
+    <script async src="https://cdn.jsdelivr.net/npm/moment@2/moment.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/frow@3/dist/frow.min.css"
@@ -23,9 +24,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/global.css" />
-    <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
   </head>
   <body class="height-100">
+    <a class="byline" href="https://github.com/codysherman/internet-time-zone" rel="noopener">Open Source</a>
     <div class="grid height-100">
       <div class="grid-item">
         <div class="frow items-baseline">
